# rs-sntp-client

./: Cargo.toml
src/: main.rs  sntp.rs
