[package]
name = "rs-sntp-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
log = "0.4.17"

[profile.release]
opt-level = 'z'     # Optimize for size
strip = true        # Strip symbols from binary